<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL" Id="{5ab2e3e9-5899-47be-9a7d-6e6ff0669809}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	iTensionMonitoringData		: INT;		// in Newton [N]
	LaserScannerData : ARRAY[1..3] OF BYTE; // Testvariable für Laser Scanner Data
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>